# wamp-proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: FINAL_VALIDATION.md  REPORT.md  RESEARCH_COHERENCE.md  RESEARCH_COHERENCE_NLI.md  RESEARCH_MODERNBERT_FILTER.md  RESEARCH_NEEDLE.md  RESEARCH_NEEDLE_NLI.md  RESEARCH_REASONING.md  RESEARCH_REASONING_NLI.md  RESEARCH_SETFIT_FILTER.md  STEP_1_ROUTER.md  adaptive_research.py  algo_comparison_long.py  attention_resonator_research.py  attention_router_research.py  calibrate_multidoc.py  calibration.py  coherence_test.py  coherence_test_long.py  cross_attention_needle_research.py  deberta_tune.py  final_validation_no_proxy.py  hypo_priority_needle.py  hypo_priority_needle_v2.py  live_proxy_test.py  long_chat_test.py  mass_calibrate_long.py  max_max_calibrate.py  model_comparison.py  multi_doc_qa.py  multi_doc_qa_long.py  needle_test.py  needle_test_long.py  nli_router_audit.py  real_world_agent_test.py  router_audit.py  stage1_audit.py
examples/: openai_client_usage.py
tools/: audit_lengths.py  audit_modernbert_onnx.py  audit_semantic_router.py  audit_semantic_router_v3.py  audit_semantic_router_v4.py  audit_setfit_onnx.py  audit_setfit_router.py  audit_truth.py  check_query.py  compare_debug.py  compare_embs.py  dataset_chatter.py  dataset_needle.py  dataset_reasoning.py  dataset_task_needle.py  dataset_task_reasoning.py  dataset_task_summary.py  export_debug.py  (+33 more)
(+12 files in other folders)
